terraform/playbooks/manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/rkrisanoff/devops-spring-2025/frontend:latest               # ← ваш путь к образу
        ports:
        - containerPort: 8005
