terraform/playbooks/manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: LoadBalancer                        # можно изменить на NodePort или ClusterIP
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 8005                                # порт внутри кластера
    targetPort: 8005                          # порт контейнера
