terraform/playbooks/manifests/pgvector-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: pgvector
  labels:
    app: pgvector
spec:
  type: ClusterIP
  ports:
    - name: postgresql
      port: 5432
      targetPort: 5432
  selector:
    app: pgvector
