terraform/playbooks/manifests/devops-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  #- host: devops2025.ru
  - http:
      paths:
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8005
     # - path: /
     #   pathType: Prefix
     #   backend:
     #     service:
     #       name: backend
     #       port:
     #         number: 8000
